// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`normalizeDocsisStatus should work with ofdm in download 1`] = `
Object {
  "downstream": Array [
    Object {
      "channelId": "5",
      "channelType": "SC-QAM",
      "frequency": 602,
      "lockStatus": "Locked",
      "modulation": "256 QAM",
      "powerLevel": -4,
      "snr": 38.8,
    },
    Object {
      "channelId": "1",
      "channelType": "SC-QAM",
      "frequency": 114,
      "lockStatus": "Locked",
      "modulation": "256 QAM",
      "powerLevel": -5.4,
      "snr": 36.5,
    },
    Object {
      "channelId": "2",
      "channelType": "SC-QAM",
      "frequency": 130,
      "lockStatus": "Locked",
      "modulation": "256 QAM",
      "powerLevel": -5.4,
      "snr": 36.8,
    },
    Object {
      "channelId": "3",
      "channelType": "SC-QAM",
      "frequency": 138,
      "lockStatus": "Locked",
      "modulation": "256 QAM",
      "powerLevel": -5.5,
      "snr": 36.9,
    },
    Object {
      "channelId": "4",
      "channelType": "SC-QAM",
      "frequency": 146,
      "lockStatus": "Locked",
      "modulation": "256 QAM",
      "powerLevel": -5.2,
      "snr": 37.2,
    },
    Object {
      "channelId": "6",
      "channelType": "SC-QAM",
      "frequency": 618,
      "lockStatus": "Locked",
      "modulation": "256 QAM",
      "powerLevel": -3.8,
      "snr": 38.9,
    },
    Object {
      "channelId": "7",
      "channelType": "SC-QAM",
      "frequency": 626,
      "lockStatus": "Locked",
      "modulation": "256 QAM",
      "powerLevel": -3.9,
      "snr": 38.9,
    },
    Object {
      "channelId": "8",
      "channelType": "SC-QAM",
      "frequency": 642,
      "lockStatus": "Locked",
      "modulation": "256 QAM",
      "powerLevel": -4.9,
      "snr": 38.5,
    },
    Object {
      "channelId": "9",
      "channelType": "SC-QAM",
      "frequency": 650,
      "lockStatus": "Locked",
      "modulation": "256 QAM",
      "powerLevel": -4.8,
      "snr": 38.4,
    },
    Object {
      "channelId": "10",
      "channelType": "SC-QAM",
      "frequency": 658,
      "lockStatus": "Locked",
      "modulation": "256 QAM",
      "powerLevel": -4.1,
      "snr": 39.1,
    },
    Object {
      "channelId": "11",
      "channelType": "SC-QAM",
      "frequency": 666,
      "lockStatus": "Locked",
      "modulation": "256 QAM",
      "powerLevel": -4.1,
      "snr": 38.7,
    },
    Object {
      "channelId": "12",
      "channelType": "SC-QAM",
      "frequency": 674,
      "lockStatus": "Locked",
      "modulation": "256 QAM",
      "powerLevel": -3.1,
      "snr": 39,
    },
    Object {
      "channelId": "13",
      "channelType": "SC-QAM",
      "frequency": 682,
      "lockStatus": "Locked",
      "modulation": "256 QAM",
      "powerLevel": -2.8,
      "snr": 39.7,
    },
    Object {
      "channelId": "14",
      "channelType": "SC-QAM",
      "frequency": 690,
      "lockStatus": "Locked",
      "modulation": "256 QAM",
      "powerLevel": -1.8,
      "snr": 40.4,
    },
    Object {
      "channelId": "15",
      "channelType": "SC-QAM",
      "frequency": 698,
      "lockStatus": "Locked",
      "modulation": "64 QAM",
      "powerLevel": -7.7,
      "snr": 34.6,
    },
    Object {
      "channelId": "16",
      "channelType": "SC-QAM",
      "frequency": 706,
      "lockStatus": "Locked",
      "modulation": "64 QAM",
      "powerLevel": -6.8,
      "snr": 35.4,
    },
    Object {
      "channelId": "17",
      "channelType": "SC-QAM",
      "frequency": 714,
      "lockStatus": "Locked",
      "modulation": "64 QAM",
      "powerLevel": -7.1,
      "snr": 35,
    },
    Object {
      "channelId": "18",
      "channelType": "SC-QAM",
      "frequency": 722,
      "lockStatus": "Locked",
      "modulation": "64 QAM",
      "powerLevel": -7.2,
      "snr": 35,
    },
    Object {
      "channelId": "19",
      "channelType": "SC-QAM",
      "frequency": 730,
      "lockStatus": "Locked",
      "modulation": "64 QAM",
      "powerLevel": -6.9,
      "snr": 35.1,
    },
    Object {
      "channelId": "20",
      "channelType": "SC-QAM",
      "frequency": 738,
      "lockStatus": "Locked",
      "modulation": "64 QAM",
      "powerLevel": -5.9,
      "snr": 35.7,
    },
    Object {
      "channelId": "21",
      "channelType": "SC-QAM",
      "frequency": 746,
      "lockStatus": "Locked",
      "modulation": "64 QAM",
      "powerLevel": -5.6,
      "snr": 35.8,
    },
    Object {
      "channelId": "22",
      "channelType": "SC-QAM",
      "frequency": 754,
      "lockStatus": "Locked",
      "modulation": "64 QAM",
      "powerLevel": -6.7,
      "snr": 35,
    },
    Object {
      "channelId": "23",
      "channelType": "SC-QAM",
      "frequency": 762,
      "lockStatus": "Locked",
      "modulation": "64 QAM",
      "powerLevel": -6.4,
      "snr": 35.1,
    },
    Object {
      "channelId": "24",
      "channelType": "SC-QAM",
      "frequency": 770,
      "lockStatus": "Locked",
      "modulation": "64 QAM",
      "powerLevel": -6.3,
      "snr": 35.1,
    },
    Object {
      "channelId": "25",
      "channelType": "SC-QAM",
      "frequency": 778,
      "lockStatus": "Locked",
      "modulation": "64 QAM",
      "powerLevel": -6,
      "snr": 35.7,
    },
    Object {
      "channelId": "26",
      "channelType": "SC-QAM",
      "frequency": 786,
      "lockStatus": "Locked",
      "modulation": "64 QAM",
      "powerLevel": -6.2,
      "snr": 35.2,
    },
    Object {
      "channelId": "27",
      "channelType": "SC-QAM",
      "frequency": 794,
      "lockStatus": "Locked",
      "modulation": "64 QAM",
      "powerLevel": -6.5,
      "snr": 34.8,
    },
    Object {
      "channelId": "28",
      "channelType": "SC-QAM",
      "frequency": 802,
      "lockStatus": "Locked",
      "modulation": "64 QAM",
      "powerLevel": -7.1,
      "snr": 34.7,
    },
    Object {
      "channelId": "29",
      "channelType": "SC-QAM",
      "frequency": 810,
      "lockStatus": "Locked",
      "modulation": "64 QAM",
      "powerLevel": -6.9,
      "snr": 34.9,
    },
    Object {
      "channelId": "30",
      "channelType": "SC-QAM",
      "frequency": 818,
      "lockStatus": "Locked",
      "modulation": "64 QAM",
      "powerLevel": -6.7,
      "snr": 35,
    },
    Object {
      "channelId": "31",
      "channelType": "SC-QAM",
      "frequency": 826,
      "lockStatus": "Locked",
      "modulation": "64 QAM",
      "powerLevel": -7.2,
      "snr": 35,
    },
    Object {
      "channelId": "32",
      "channelType": "SC-QAM",
      "frequency": 834,
      "lockStatus": "Locked",
      "modulation": "64 QAM",
      "powerLevel": -7.8,
      "snr": 34.2,
    },
  ],
  "downstreamOfdm": Array [
    Object {
      "channelId": "33",
      "channelType": "OFDM",
      "frequencyEnd": 324,
      "frequencyStart": 151,
      "lockStatus": "Locked",
      "modulation": "qam256/qam1024",
      "powerLevel": -3,
      "snr": 39.55,
    },
  ],
  "upstream": Array [
    Object {
      "channelId": "1",
      "channelType": "SC-QAM",
      "frequency": 51,
      "lockStatus": "Completed",
      "modulation": "qam64",
      "powerLevel": 49.8,
      "snr": 0,
    },
    Object {
      "channelId": "2",
      "channelType": "SC-QAM",
      "frequency": 44,
      "lockStatus": "Completed",
      "modulation": "qam64",
      "powerLevel": 51.8,
      "snr": 0,
    },
    Object {
      "channelId": "3",
      "channelType": "SC-QAM",
      "frequency": 37,
      "lockStatus": "Completed",
      "modulation": "qam64",
      "powerLevel": 51.8,
      "snr": 0,
    },
    Object {
      "channelId": "4",
      "channelType": "SC-QAM",
      "frequency": 30,
      "lockStatus": "Completed",
      "modulation": "qam32",
      "powerLevel": 51.8,
      "snr": 0,
    },
  ],
  "upstreamOfdma": Array [],
}
`;

exports[`normalizeDocsisStatus should work with ofdm in download and ofdam in upload 1`] = `
Object {
  "downstream": Array [
    Object {
      "channelId": "5",
      "channelType": "SC-QAM",
      "frequency": 602,
      "lockStatus": "Locked",
      "modulation": "256 QAM",
      "powerLevel": -4.3,
      "snr": 38.9,
    },
    Object {
      "channelId": "1",
      "channelType": "SC-QAM",
      "frequency": 114,
      "lockStatus": "Locked",
      "modulation": "256 QAM",
      "powerLevel": -5.8,
      "snr": 36.4,
    },
    Object {
      "channelId": "2",
      "channelType": "SC-QAM",
      "frequency": 130,
      "lockStatus": "Locked",
      "modulation": "256 QAM",
      "powerLevel": -5.8,
      "snr": 36.8,
    },
    Object {
      "channelId": "3",
      "channelType": "SC-QAM",
      "frequency": 138,
      "lockStatus": "Locked",
      "modulation": "256 QAM",
      "powerLevel": -5.9,
      "snr": 36.9,
    },
    Object {
      "channelId": "4",
      "channelType": "SC-QAM",
      "frequency": 146,
      "lockStatus": "Locked",
      "modulation": "256 QAM",
      "powerLevel": -5.6,
      "snr": 37.2,
    },
    Object {
      "channelId": "6",
      "channelType": "SC-QAM",
      "frequency": 618,
      "lockStatus": "Locked",
      "modulation": "256 QAM",
      "powerLevel": -3.7,
      "snr": 39.1,
    },
    Object {
      "channelId": "7",
      "channelType": "SC-QAM",
      "frequency": 626,
      "lockStatus": "Locked",
      "modulation": "256 QAM",
      "powerLevel": -3.4,
      "snr": 39.5,
    },
    Object {
      "channelId": "8",
      "channelType": "SC-QAM",
      "frequency": 642,
      "lockStatus": "Locked",
      "modulation": "256 QAM",
      "powerLevel": -3.1,
      "snr": 39.8,
    },
    Object {
      "channelId": "9",
      "channelType": "SC-QAM",
      "frequency": 650,
      "lockStatus": "Locked",
      "modulation": "256 QAM",
      "powerLevel": -2.7,
      "snr": 40,
    },
    Object {
      "channelId": "10",
      "channelType": "SC-QAM",
      "frequency": 658,
      "lockStatus": "Locked",
      "modulation": "256 QAM",
      "powerLevel": -2.5,
      "snr": 40,
    },
    Object {
      "channelId": "11",
      "channelType": "SC-QAM",
      "frequency": 666,
      "lockStatus": "Locked",
      "modulation": "256 QAM",
      "powerLevel": -2.9,
      "snr": 39.6,
    },
    Object {
      "channelId": "12",
      "channelType": "SC-QAM",
      "frequency": 674,
      "lockStatus": "Locked",
      "modulation": "256 QAM",
      "powerLevel": -2.6,
      "snr": 39.6,
    },
    Object {
      "channelId": "13",
      "channelType": "SC-QAM",
      "frequency": 682,
      "lockStatus": "Locked",
      "modulation": "256 QAM",
      "powerLevel": -2.6,
      "snr": 40.1,
    },
    Object {
      "channelId": "14",
      "channelType": "SC-QAM",
      "frequency": 690,
      "lockStatus": "Locked",
      "modulation": "256 QAM",
      "powerLevel": -1.7,
      "snr": 40.6,
    },
    Object {
      "channelId": "15",
      "channelType": "SC-QAM",
      "frequency": 698,
      "lockStatus": "Locked",
      "modulation": "64 QAM",
      "powerLevel": -7.9,
      "snr": 34.7,
    },
    Object {
      "channelId": "16",
      "channelType": "SC-QAM",
      "frequency": 706,
      "lockStatus": "Locked",
      "modulation": "64 QAM",
      "powerLevel": -7.1,
      "snr": 35.4,
    },
    Object {
      "channelId": "17",
      "channelType": "SC-QAM",
      "frequency": 714,
      "lockStatus": "Locked",
      "modulation": "64 QAM",
      "powerLevel": -7.5,
      "snr": 34.8,
    },
    Object {
      "channelId": "18",
      "channelType": "SC-QAM",
      "frequency": 722,
      "lockStatus": "Locked",
      "modulation": "64 QAM",
      "powerLevel": -7.6,
      "snr": 35,
    },
    Object {
      "channelId": "19",
      "channelType": "SC-QAM",
      "frequency": 730,
      "lockStatus": "Locked",
      "modulation": "64 QAM",
      "powerLevel": -7.2,
      "snr": 35.1,
    },
    Object {
      "channelId": "20",
      "channelType": "SC-QAM",
      "frequency": 738,
      "lockStatus": "Locked",
      "modulation": "64 QAM",
      "powerLevel": -6.3,
      "snr": 35.8,
    },
    Object {
      "channelId": "21",
      "channelType": "SC-QAM",
      "frequency": 746,
      "lockStatus": "Locked",
      "modulation": "64 QAM",
      "powerLevel": -6.2,
      "snr": 35.7,
    },
    Object {
      "channelId": "22",
      "channelType": "SC-QAM",
      "frequency": 754,
      "lockStatus": "Locked",
      "modulation": "64 QAM",
      "powerLevel": -7.2,
      "snr": 35,
    },
    Object {
      "channelId": "23",
      "channelType": "SC-QAM",
      "frequency": 762,
      "lockStatus": "Locked",
      "modulation": "64 QAM",
      "powerLevel": -7,
      "snr": 35,
    },
    Object {
      "channelId": "24",
      "channelType": "SC-QAM",
      "frequency": 770,
      "lockStatus": "Locked",
      "modulation": "64 QAM",
      "powerLevel": -6.7,
      "snr": 35,
    },
    Object {
      "channelId": "25",
      "channelType": "SC-QAM",
      "frequency": 778,
      "lockStatus": "Locked",
      "modulation": "64 QAM",
      "powerLevel": -6.3,
      "snr": 35.8,
    },
    Object {
      "channelId": "26",
      "channelType": "SC-QAM",
      "frequency": 786,
      "lockStatus": "Locked",
      "modulation": "64 QAM",
      "powerLevel": -6.4,
      "snr": 35.3,
    },
    Object {
      "channelId": "27",
      "channelType": "SC-QAM",
      "frequency": 794,
      "lockStatus": "Locked",
      "modulation": "64 QAM",
      "powerLevel": -6.5,
      "snr": 35.3,
    },
    Object {
      "channelId": "28",
      "channelType": "SC-QAM",
      "frequency": 802,
      "lockStatus": "Locked",
      "modulation": "64 QAM",
      "powerLevel": -6.8,
      "snr": 35.2,
    },
    Object {
      "channelId": "29",
      "channelType": "SC-QAM",
      "frequency": 810,
      "lockStatus": "Locked",
      "modulation": "64 QAM",
      "powerLevel": -7,
      "snr": 35,
    },
    Object {
      "channelId": "30",
      "channelType": "SC-QAM",
      "frequency": 818,
      "lockStatus": "Locked",
      "modulation": "64 QAM",
      "powerLevel": -6.4,
      "snr": 35.3,
    },
    Object {
      "channelId": "31",
      "channelType": "SC-QAM",
      "frequency": 826,
      "lockStatus": "Locked",
      "modulation": "64 QAM",
      "powerLevel": -7,
      "snr": 35.2,
    },
    Object {
      "channelId": "32",
      "channelType": "SC-QAM",
      "frequency": 834,
      "lockStatus": "Locked",
      "modulation": "64 QAM",
      "powerLevel": -7.9,
      "snr": 34.4,
    },
  ],
  "downstreamOfdm": Array [
    Object {
      "channelId": "33",
      "channelType": "OFDM",
      "frequencyEnd": 324,
      "frequencyStart": 151,
      "lockStatus": "Locked",
      "modulation": "qam256/qam1024",
      "powerLevel": -3.6,
      "snr": 39.39,
    },
  ],
  "upstream": Array [
    Object {
      "channelId": "1",
      "channelType": "SC-QAM",
      "frequency": 51,
      "lockStatus": "Completed",
      "modulation": "qam64",
      "powerLevel": 51.8,
      "snr": 0,
    },
    Object {
      "channelId": "2",
      "channelType": "SC-QAM",
      "frequency": 44,
      "lockStatus": "Completed",
      "modulation": "qam64",
      "powerLevel": 51.8,
      "snr": 0,
    },
    Object {
      "channelId": "3",
      "channelType": "SC-QAM",
      "frequency": 37,
      "lockStatus": "Completed",
      "modulation": "qam64",
      "powerLevel": 51.8,
      "snr": 0,
    },
    Object {
      "channelId": "4",
      "channelType": "SC-QAM",
      "frequency": 30,
      "lockStatus": "Completed",
      "modulation": "qam32",
      "powerLevel": 51.8,
      "snr": 0,
    },
  ],
  "upstreamOfdma": Array [
    Object {
      "channelId": "9",
      "channelType": "OFDMA",
      "frequencyEnd": 64.75,
      "frequencyStart": 29.8,
      "lockStatus": "Completed",
      "modulation": "qpsk",
      "powerLevel": 44,
      "snr": 0,
    },
  ],
}
`;
